# gbdc

./: .gitignore  CMakeLists.txt  README.md  before_build.sh  build-wheels.sh  build.sh  build_archive_cmake.sh  build_test.sh  install-pymod.sh  setup.py  update_tool.sh
.github/workflows/: build_test.yml  build_wheels.yml  cmake-multi-platform.yml  create_release.yml  linux_build_test.yml  macos12_build_test.yml  macos13_build_test.yml  macos14_build_test.yml  macos_build_test.yml  windows_build_test.yml
doc/: Domains.md  Extractors.md  Index.md  Readme.md  Transformers.md
doc/extractors/: CNFBaseFeatures.md  CNFGateFeatures.md  Isohash.md  OPBBaseFeatures.md  WCNFBaseFeatures.md
doc/transformers/: CNF2KIS.md  Sanitizer.md
lib/argparse/: argparse.hpp
lib/md5/: md5.cpp  md5.h
src/: CMakeLists.txt  Main.cc  gbdlib.cc  gbdlib.h
src/extract/: CMakeLists.txt  CNFBaseFeatures.h  CNFGateFeatures.h  IExtractor.h  OPBBaseFeatures.h  Util.h  WCNFBaseFeatures.h
src/extract/gates/: GateAnalyzer.h
src/features/: CMakeLists.txt  CNFStats.h  CNFStatsRed.h  GateStats.h  Util.h
src/gates/: GateAnalyzer.h
src/identify/: GBDHash.h  ISOHash.h
src/test/: CMakeLists.txt  Util.h  tests.cc  tests_cnfbasefeatures.cc  tests_gbdlib.cc  tests_streamcompressor.cc  tests_threadpool.cc
src/test/resources/: expected_record.txt  test.cnf.xz
src/transform/: IndependentSet.h  Normalize.h  Sanitize.h
src/util/: CMakeLists.txt  CNFFormula.h  GBDHash.h  ISOHash.h  ResourceLimits.h  StreamBuffer.h  StreamCompressor.h  ThreadPool.h  ThreadPool.hh  malloc_count.cc  malloc_count.h  nadeau.h  py_util.h
src/util/pybind11/: .clang-format
src/util/threadpool/: CMakeLists.txt  MPSCQueue.h  ThreadPool.cc  ThreadPool.h  TrackingAllocator.h  Util.h  malloc_count.cc  malloc_count.h
